fixed targeting ghost bug fixed radar clipping issue tweaked css for hud

--- a/css/hud.css
+++ b/css/hud.css
@@ -1,15 +1,21 @@
+* {
+  font-family: sans-serif;
+  font-weight: bold;
+}
 canvas {
   position: fixed;
 }
 .hud_rotacol {
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   padding: .3em .6em;
-  background: #252525;
+  background: #121516;
+  font-size: .8em;
   opacity: .7;
-  color: #0f0;
+  color: #7b9cab;
   border-radius: .5em;
+  box-shadow: 0px 0px 20px 1px #3b5c6b inset,0px 0px 15px 0px #3b5c6b;
 }
 .hud_console_display li {
   margin: -0.2em .4em;
@@ -18,12 +24,9 @@ canvas {
   padding: 0;
   border-radius: .3em;
   height: 5.9em;
-  background: #000;
   overflow: auto;
-  margin: 0;
-  font-family: sans-serif;
-  font-weight: bold;
   font-size: .8em;
+  margin: 0;
 }
 .hud_console_bottom {
   margin: 0;
@@ -38,6 +41,7 @@ canvas {
   border: none;
   width: 100%;
   margin-top: .2em;
+  box-shadow: 0px 0px 1px 1px #3b5c6b inset;
 }
 .hud_console {
   position: fixed;
@@ -46,11 +50,12 @@ canvas {
   height: 6em;
   width: 50%;
   padding: .3em;
-  background: #252525;
+  background: #121516;
   opacity: .7;
-  color: #def;
+  color: #7b9cab;
   border-radius: .5em;
-  border: 2px solid #555;
+  border: 2px solid #3b5c6b;
+  box-shadow: 0px 0px 30px 1px #3b5c6b inset,0px 0px 15px 0px #3b5c6b;
 }
 .hud_altimeter {
   position: fixed;
@@ -75,13 +80,15 @@ canvas {
 }
 .hud_debug {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: 10px;
   padding: .3em .6em;
-  background: #252525;
+  background: #121516;
   opacity: .7;
-  color: #0f0;
+  color: #7b9cab;
   border-radius: .5em;
+  font-size: .8em;
+  box-shadow: 0px 0px 20px 1px #3b5c6b inset,0px 0px 15px 0px #3b5c6b;
 }
 .hud_radar {
   position: fixed;
@@ -89,12 +96,13 @@ canvas {
   left: 10px;
   width: 200px;
   height: 200px;
+  box-shadow: 0px 0px 75px 35px #3b5c6b inset,0px 0px 15px 0px #3b5c6b;
   overflow: hidden;
-  border-radius: 7em;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
 }
 .hud_radar_canvas {
-  overflow: hidden;
-  border-radius: 7em;
+  position: relative;
 }
 .hud_targeting {
   position: fixed;
